--- a/app/css/pages/individual_supporters.css
+++ b/app/css/pages/individual_supporters.css
@@ -9,7 +9,7 @@
         }
 
         & .emoji {
-            font-size: 80px;
+            @apply md:text-[80px] text-[42px];
             @apply mb-16;
         }
 
