--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -57,7 +57,7 @@
         %li.text-p-2xlarge Exercism focusses on the learning journey, not the destination. The process and enjoyment of learning is more important than absolute factual correctness.
 
     .leadership.flex.items-start.pt-64.pb-80.flex-col-reverse.lg:flex-row
-      = graphical_icon "team", category: 'graphics', css_class: 'graphic self-center md:self-start mt-20 lg:mt-0'
+      = graphical_icon "team", category: 'graphics', css_class: 'graphic self-center md:self-start mt-20 lg:mt-0 m-auto'
 
       .info
         = graphical_icon "contributing-header", css_class: 'icon'
