--- a/app/css/pages/about.css
+++ b/app/css/pages/about.css
@@ -105,7 +105,7 @@
         & .c-icon.graphic {
             height: 240px;
             width: 240px;
-            @apply mr-60;
+            @apply lg:mr-60;
         }
         & .c-icon.icon {
             height: 64px;
