Responsive Profile/Testimonials (#5598)
* Make profile/solutions page responsive

* Add scrollable menu

* Move TS around

* Install scrolling

* Responsive profile/summary (#5596)

* Add scrollable menu

* Move TS around

* Install scrolling

* Make summary look OK on mobiles

* Columns, introducer breakpoint, correct types

* Tailor stats

* Fix scroll bug

* Tiny testimonial tweaks

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/pages/profile-testimonials.css
+++ b/app/css/pages/profile-testimonials.css
@@ -5,7 +5,7 @@
     & article {
         @apply pt-32;
         & .stats {
-            @apply grid grid-cols-3;
+            @apply grid md:grid-cols-3 grid-cols-1 justify-items-center;
             @apply mx-auto mb-48;
             max-width: 690px;
             & .stat {
@@ -23,8 +23,7 @@
         }
 
         & .testimonials {
-            column-count: 3;
-            column-gap: 24px;
+            @apply columns-1 sm:columns-2 md:columns-3 gap-24;
         }
         & .testimonial {
             display: inline-block;
