Responsive Profile/Contributions (#5597)
* Make profile/solutions page responsive

* Add scrollable menu

* Move TS around

* Install scrolling

* Responsive profile/summary (#5596)

* Add scrollable menu

* Move TS around

* Install scrolling

* Make summary look OK on mobiles

* Building, Maintaining

* Authoring

* Remove unnecessary span

* Testimonials tweaks

* Change padding on responsive

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/pages/profile-contributions.css
+++ b/app/css/pages/profile-contributions.css
@@ -23,7 +23,7 @@
             & .reputation-token {
                 @apply flex items-center;
                 @apply mb-16 rounded-8;
-                @apply py-16 pl-20 pr-40;
+                @apply py-16 pl-20 sm:pr-40 pr-20;
                 @apply shadow-base;
 
                 & .primary-icon {
@@ -32,9 +32,9 @@
                     @apply mr-24;
                 }
                 & .info {
-                    @apply flex-grow;
+                    @apply flex-grow sm:mr-0 mr-8;
                     & .title {
-                        @apply text-h5 mb-6;
+                        @apply sm:text-h5 text-h6 mb-6;
                         @apply font-medium;
                         & strong {
                             @apply font-semibold;
@@ -78,12 +78,23 @@
         }
         & .authoring {
             & .exercises {
-                @apply grid grid-cols-2 gap-x-16 gap-y-16;
+                @apply grid md:grid-cols-2 grid-cols-1 gap-x-16 gap-y-16;
             }
 
             & .c-exercise-widget {
                 @apply py-16 px-24 w-100;
                 height: 100%;
+                @apply flex-col sm:flex-row;
+
+                .c-exercise-icon {
+                    @apply mr-0 mb-16 sm:mr-16 sm:mb-0;
+                }
+
+                .--track {
+                    .--track-title {
+                        @apply sm:block hidden;
+                    }
+                }
 
                 & .c-exercise-status-tag {
                     display: none;
