--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -9,7 +9,7 @@
       = graphical_icon "guides", css_class: "header-icon", hex: true
       %h1 Welcome to Exercism's docs 👋
       %p Find out everything you need to know about using and contributing to Exercism.
-      %hr.c-divider
+      %hr.c-divider.md:block.hidden
 
     .using-section
       .info
