--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -2,18 +2,26 @@
     /* Makes element scrollable on the x-axis but hides the scrollbar */
     .scroll-x-hidden {
         @apply overflow-x-auto;
+        @apply -ml-[15px];
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
         &::-webkit-scrollbar {
             display: none; /* Chrome, Opera, Safari */
         }
+        -webkit-mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 95%,
+            transparent
+        );
         mask-image: linear-gradient(
             to right,
             transparent,
             white 20px,
-            white 90%,
+            white 95%,
             transparent
         );
-        @apply pl-20 pr-[10%];
+        @apply pl-20 pr-[5%];
     }
 }
