--- a/app/views/premium/show.html.haml
+++ b/app/views/premium/show.html.haml
@@ -2,7 +2,7 @@
   = render ReactComponents::Modals::WelcomeToPremiumModal.new
   .gradient-container.top.pt-20.md:pt-48.pb-64
     .lg-container
-      .top.grid.grid-cols-1.md:grid-cols-2.gap-48
+      .top.grid.grid-cols-1.lg:grid-cols-2.gap-48
         .top-lhs
           %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
             Exercism Premium
