--- a/app/css/components/docs-side-nav.css
+++ b/app/css/components/docs-side-nav.css
@@ -1,24 +1,63 @@
 @import "../styles";
 
 .c-docs-side-nav {
+    @apply md:static absolute left-0;
+    @apply bg-backgroundColorA z-1;
     width: 350px;
-    @apply border-r-1 border-borderColor6;
-    @apply pt-32 pr-32;
+    @apply md:border-r-1 border-borderColor6;
+    @apply md:pt-32 md:pr-32 md:pl-0 p-16 pb-0;
 
-    & h2 {
+    .trigger-label {
+        @apply cursor-pointer md:hidden block w-fit;
+        .icon-bar {
+            @apply block bg-textColor1 m-4;
+            width: 22px;
+            height: 2px;
+            transition: transform 0.2s;
+        }
+        .top-bar {
+            transform: rotate(0);
+        }
+        .middle-bar {
+            opacity: 1;
+        }
+    }
+
+    .side-menu-trigger:checked {
+        & + label {
+            .top-bar {
+                transform: rotate(45deg);
+                transform-origin: 10% 10%;
+            }
+            .middle-bar {
+                opacity: 0;
+            }
+            .bottom-bar {
+                transform: rotate(-45deg);
+                transform-origin: 10% 90%;
+            }
+        }
+        & ~ ul {
+            @apply block;
+        }
+    }
+
+    h2 {
         @apply text-h4 mb-16;
     }
 
-    & ul {
-        & li {
+    ul {
+        @apply md:block hidden md:m-0 mt-16;
+
+        li {
             @apply mb-16;
-            & a {
+            a {
                 @apply block;
                 @apply text-16 leading-140 font-medium;
             }
             &.header {
                 @apply flex items-center;
-                & a {
+                a {
                     @apply flex-grow flex;
                     @apply text-textColor2 font-semibold;
                     &:after {
@@ -35,12 +74,12 @@
                 }
             }
             &.selected {
-                & a {
+                a {
                     @apply text-adaptivePurple font-semibold;
                 }
             }
         }
-        & ul {
+        ul {
             @apply border-l-2 border-borderColor6 pl-24;
             @apply mb-12;
         }
