--- a/app/views/premium/external.html.haml
+++ b/app/views/premium/external.html.haml
@@ -1,11 +1,11 @@
 #page-premium
-  .gradient-container.top.pt-20.md:pt-48.pb-64
+  .gradient-container.top.md:py-64.py-24
     .lg-container
       .grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
         .top-lhs.flex.flex-col
-          %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
+          %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-32
             Exercism Premium
-          %h3.text-h3.mb-16 Supercharge your Exercism Experience!
+          %h3.text-h3.sm:mb-16.mb-24 Supercharge your Exercism Experience!
           %h5.launching.rounded-8 Only $9.99/month
           %p.text-p-xlarge.mb-8{ class: "max-w-[600px]" }
             Enhance your learning journey with Exercism Premium!
@@ -17,16 +17,16 @@
           %p.text-p-large.mb-24
             (All while supporting our mission of equal education for all! 💙)
 
-          .flex.flex-row.gap-16
-            = link_to "Upgrade to Premium", "#pricing-section", class: 'btn-l btn-primary basis-1/2', data: { turbo: false }
-            = link_to "Learn more", "#features-section", class: 'btn-l btn-secondary', data: { turbo: false }
+          .flex.sm:flex-row.flex-col.gap-16
+            = link_to "Upgrade to Premium", "#pricing-section", class: 'lg:btn-l btn-m btn-primary lg:basis-1/2 basis-1', data: { turbo: false }
+            = link_to "Learn more", "#features-section", class: 'lg:btn-l btn-m btn-secondary', data: { turbo: false }
 
         .top-rhs
           .c-youtube-container
             %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/4chNHw9i6Og", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
   #features-section
-  .gradient-container.py-64
+  .gradient-container.md:py-64.py-24
     .lg-container
       %h2.text-h2.mb-32 Exclusive Premium Features
       .features.mb-32
@@ -39,18 +39,18 @@
       %p.text-p-large.text-center (And even more coming soon!)
 
   #pricing-section
-  .gradient-container.text-center.py-64
+  .gradient-container.text-center.md:py-64.py-24
     .lg-container.flex.flex-col
-      %h2.text-h1.mb-8.relative Choose Your Subscription
+      %h2.text-h2.mb-8.relative Choose Your Subscription
       %p.text-p-xlarge.mb-16.relative Subscribe monthly, annually, or forever!
 
-      .grid.grid-cols-3.gap-32.justify-center.my-32
+      .grid.xl:grid-cols-3.md:grid-cols-2.grid-cols-1.gap-32.justify-center.my-32
         .price-card.border-purpleDarker3
           %h2.text-h2 Monthly
           .price $9.99/month
           %p.text-p-base.mb-auto Subscribe monthly and enjoy all our Premium features for as long as you stay subscribed. Cancel anytime or convert to an annual or Insiders membership later.
           - if user_signed_in?
-            = render ReactComponents::Premium::PriceOption.new(:monthly)
+            .mt-32= render ReactComponents::Premium::PriceOption.new(:monthly)
 
         .price-card.border-gradient-russianViolet
           .most-popular Most popular
@@ -60,11 +60,11 @@
             %strong.text-white.font-semibold Save over 20%
             by subscribing annually. Enjoy Premium for a whole year, and get access to new features as they're released. Your membership will renew annually.
           - if user_signed_in?
-            = render ReactComponents::Premium::PriceOption.new(:yearly)
+            .mt-32= render ReactComponents::Premium::PriceOption.new(:yearly)
 
         .price-card.border-2.border-purpleDarkened
           %h2.text-h2 Become an Insider
           .price $499
-          %p.text-p-base.mb-32 Enjoy full lifetime access to both Exercism Premium and Exercism Insiders, giving you behind-the-scenes access to videos and exclusive team community spaces.
+          %p.text-p-base.mb-auto Enjoy full lifetime access to both Exercism Premium and Exercism Insiders, giving you behind-the-scenes access to videos and exclusive team community spaces.
           - if user_signed_in?
-            = render ReactComponents::Premium::PriceOption.new(:lifetime)
+            .mt-32= render ReactComponents::Premium::PriceOption.new(:lifetime)
