Add fixed sidebar

--- a/app/css/components/docs-side-nav.css
+++ b/app/css/components/docs-side-nav.css
@@ -3,9 +3,18 @@
 .c-docs-side-nav {
     @apply md:static absolute left-0;
     @apply bg-backgroundColorA z-1;
-    width: 350px;
     @apply md:border-r-1 border-borderColor6;
     @apply md:pt-32 md:pr-32 md:pl-0 p-16 pb-0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: white;
+    @apply shadow-lgZ1;
+    box-shadow: 0 0 10px 10px rgba(0,0,0,0.2);
+    z-index: 100000000000000;
+    padding: 16px;
 
     .trigger-label {
         @apply cursor-pointer md:hidden block;
@@ -64,6 +73,7 @@
                 a {
                     @apply flex-grow flex;
                     @apply text-textColor2 font-semibold;
+                    span { @apply mr-12; }
                     &:after {
                         content: "+";
                         width: 17px;
