--- a/app/css/components/docs-side-nav.css
+++ b/app/css/components/docs-side-nav.css
@@ -1,17 +1,12 @@
 @import "../styles";
 
 .c-docs-side-nav {
-    @apply md:static fixed;
-    @apply bg-backgroundColorA z-1;
+    @apply md:static fixed top-0 left-0 bottom-0;
+    @apply bg-backgroundColorA md:bg-backgroundColorB z-[100];
     @apply md:border-r-1 border-borderColor6;
     @apply md:pt-32 md:pr-32 md:pl-0 p-16 pb-0;
 
-    top: 0;
-    left: 0;
-    bottom: 0;
-    background: white;
     @apply shadow-[0_0_10px_10px_rgba(0,0,0,0.2)] md:shadow-none;
-    z-index: 100;
 
     .trigger-label {
         @apply cursor-pointer md:hidden block;
