--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -7,10 +7,11 @@
           %strong.leading-none.font-bold really
           good at programming.
         %p.text-p-xlarge.mb-24
-          Develop fluency in
+          Level up your skills in
           %em.not-italic.font-medium.text-textColor2 #{@num_tracks} programming languages
           with our unique blend of learning, practice and mentoring.
-          Exercism is fun, effective and
+          Exercism is fun, effective and efficient.
+          Oh, and it's
           %strong.text-textColor2 100% free, forever.
         .buttons.flex.mb-40.flex-col.sm:flex-row
           = link_to "Sign up for free", new_user_registration_path, class: 'btn-primary btn-l mb-12 sm:mb-0 sm:mr-24 '
@@ -31,8 +32,8 @@
       .section-header.items-center.self-center.mb-8.md:mb-12
         = graphical_icon :tracks, hex: true
         %h2.text-h1.text-center
-          Explore and
-          %strong get fluent
+          Evolve your
+          %strong knowledge and skills
           in
           %br
           #{@num_tracks} programming languages
