Break long words on docs

--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -134,6 +134,10 @@
     &.--small {
         & * {
             @apply leading-160;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            word-break: break-word;
+            hyphens: auto;
         }
 
         /******************/
