--- a/app/css/components/docs-side-nav.css
+++ b/app/css/components/docs-side-nav.css
@@ -1,15 +1,16 @@
 @import "../styles";
 
 .c-docs-side-nav {
-    @apply md:static fixed top-0 left-0 bottom-0;
-    @apply bg-backgroundColorA md:bg-backgroundColorB z-[100];
-    @apply md:border-r-1 border-borderColor6;
-    @apply md:pt-32 md:pr-32 md:pl-0 p-16 pb-0;
+    @apply xl:static fixed top-0 left-0 bottom-0;
+    @apply bg-backgroundColorA xl:bg-backgroundColorB z-[100];
+    @apply xl:border-r-1 border-borderColor6;
+    @apply xl:pt-32 xl:pr-32 xl:pl-0 p-16 pb-0;
+    @apply overflow-auto;
 
-    @apply shadow-[0_0_10px_10px_rgba(0,0,0,0.2)] md:shadow-none;
+    @apply shadow-[0_0_10px_10px_rgba(0,0,0,0.2)] xl:shadow-none;
 
     .trigger-label {
-        @apply cursor-pointer md:hidden block;
+        @apply cursor-pointer xl:hidden block;
         width: fit-content;
         .icon-bar {
             @apply block bg-textColor1 m-4;
@@ -52,7 +53,7 @@
     }
 
     ul {
-        @apply md:block hidden md:m-0 mt-16;
+        @apply xl:block hidden xl:m-0 mt-16;
 
         li {
             @apply mb-16;
