--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -134,9 +134,7 @@
     &.--small {
         & * {
             @apply leading-160;
-            overflow-wrap: break-word;
-            word-wrap: break-word;
-            word-break: break-word;
+            overflow-wrap: anywhere;
             hyphens: auto;
         }
 
