Responsive Docs tweaks (#5618)
* Break long words on docs

* Change side menu breakpoint

* Add word breaks to docs

* Improve scroll-into-view

--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -134,6 +134,8 @@
     &.--small {
         & * {
             @apply leading-160;
+            overflow-wrap: anywhere;
+            hyphens: auto;
         }
 
         /******************/
