Finetune text-wrap

--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -138,6 +138,11 @@
             hyphens: auto;
         }
 
+        table * {
+            overflow-wrap: initial;
+            hyphens: initial;
+        }
+
         /******************/
         /* Block elements */
         /*****************/
