Undo -m, add m to tables and h4 in textual content

--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -359,6 +359,10 @@
                     & .content {
                         @apply mt-0;
                     }
+
+                    h4 {
+                        @apply mt-20;
+                    }
                 }
                 & .instructions {
                     &:not-first-child {
