--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -7,6 +7,7 @@
         &::-webkit-scrollbar {
             display: none; /* Chrome, Opera, Safari */
         }
+        @apply -ml-20;
         -webkit-mask-image: linear-gradient(
             to right,
             transparent,
@@ -28,6 +29,44 @@
         .scroll-x-hidden {
             -webkit-mask-image: none;
             mask-image: none;
+        }
+    }
+
+    .scroll-x-editor-rhs {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+        -webkit-overflow-scrolling: touch;
+
+        @apply overflow-x-auto;
+        -webkit-mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 95%,
+            transparent
+        );
+        mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 95%,
+            transparent
+        );
+        @apply pl-20 pr-[5%];
+
+        &::-webkit-scrollbar {
+            @apply h-[6px];
+        }
+
+        &::-webkit-scrollbar-thumb {
+            @apply rounded-8 bg-gray;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            @apply bg-textColor6NoDark !cursor-pointer;
         }
     }
 }
