--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -15,6 +15,20 @@
     }
 }
 
+body.namespace-tracks {
+    .auth-buttons {
+        a {
+            &:first-child {
+                @apply sm:mr-8 !mr-0;
+            }
+
+            &:nth-child(2) {
+                @apply sm:flex hidden;
+            }
+        }
+    }
+}
+
 #page-exercise-show {
     & section.completed-heading {
         @apply flex items-center py-12 px-32 shadow-lg rounded-8 mb-24;
