--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -259,8 +259,8 @@ body.keyboard-navigation .nav-element:hover .arrow {
         @apply flex items-center justify-end;
         @apply ml-auto;
 
-        & a:first-child {
-            @apply mr-8;
+        & a:nth-child(2) {
+            @apply ml-8;
         }
     }
     & .auth-buttons a,
