--- a/app/css/pages/docs-show.css
+++ b/app/css/pages/docs-show.css
@@ -4,14 +4,8 @@ body.controller-docs.action-section,
 body.controller-docs.action-show {
     padding-left: 66px;
     .auth-buttons {
-        a {
-            &:first-child {
-                @apply sm:mr-8 !mr-0;
-            }
-
-            &:nth-child(2) {
-                @apply sm:flex hidden;
-            }
+        a:nth-child(2) {
+            @apply sm:flex hidden;
         }
     }
 }
