--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -21,7 +21,7 @@
             .rhs
               %div{ class: 'w-[100%] max-w-[500px]' }
                 .c-youtube-container
-                  %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/5Kg7gC1YcWs", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+                  %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/TlJaw3UZVsY", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
           %h2.text-h3.mt-32.mb-2 Learn and Earn (the badge)!
           %p.text-p-large.mb-20
@@ -78,8 +78,8 @@
           %ul.text-p-large.list-disc.pl-16
             %li.mb-4
               Help us compile the
-              = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-lispy-languages-those-with-s-expressions/5907"
-              for learning and mastering lispy-languages in our dedicated forum thread.
+              = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-jurassicy-languages/6306"
+              for learning and mastering these old skool languages in our dedicated forum thread.
             %li.mb-4
               Join in the conversation by using the
               #{link_to '#12in23 tag on our forums', 'https://forum.exercism.org/tag/12in23'},
