Tiny editor RHS tweaks (#5619)
* Undo -m, add m to tables and h4 in textual content

* Add custom styled scrollbar to editor rhs tabs

* Change opacity on hover rather than color

* Make the test less flakey

--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -231,6 +231,7 @@
         }
 
         & table {
+            @apply my-16;
             @apply shadow-base bg-backgroundColorA;
             @apply rounded-5 overflow-hidden;
 
