--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -2,12 +2,12 @@
     /* Makes element scrollable on the x-axis but hides the scrollbar */
     .scroll-x-hidden {
         @apply overflow-x-auto;
-        @apply -ml-[15px];
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
         &::-webkit-scrollbar {
             display: none; /* Chrome, Opera, Safari */
         }
+        @apply -ml-20;
         -webkit-mask-image: linear-gradient(
             to right,
             transparent,
@@ -29,6 +29,45 @@
         .scroll-x-hidden {
             -webkit-mask-image: none;
             mask-image: none;
+        }
+    }
+
+    .scroll-x-editor-rhs {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+        -webkit-overflow-scrolling: touch;
+
+        @apply overflow-x-auto;
+        -webkit-mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 95%,
+            transparent
+        );
+        mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 95%,
+            transparent
+        );
+        @apply pl-20 pr-[5%];
+
+        &::-webkit-scrollbar {
+            @apply h-[6px];
+        }
+
+        &::-webkit-scrollbar-thumb {
+            @apply rounded-8 bg-gray;
+            --tw-bg-opacity: 0.5;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            --tw-bg-opacity: 1;
         }
     }
 }
